<resources>
    <string name="app_name">CloneSpotify</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="device_list">List of Devices</string>
    <string name="status_sign_in">You are logged in as Thanh Hang</string>
    <string name="tv_device_list">Listen and tune the spotify on your device</string>
    <string name="registerAcount">Register now</string>
    <string name="disconnected">You are offline \n Please connect to the internet and try again</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="detail_video_title_transition">title</string>
    <string name="detail_video_content_transition">content</string>
    <string name="detail_video_poster_transition">poster</string>

    <string name="title_video_rec">[Vietsub + Lyrics] Love The Way You Lie - Skylar Grey</string>
    <string name="description_video_rec">Translator: Cam Lavigne
Encode: Chuối (Banana)
FB: https://www.facebook.com/TraiDatMauCam/
"Just gonna stand there and watch me burn
But that's all right because I like the way it hurts
Just gonna stand there and hear me cry
But that's all right because I love the way you lie"</string>
    <string name="view_rec">100 views</string>
    <string name="tv_device">List of available devices</string>
    <string name="name_device">HTC Desire 728g</string>

    <string name="cancel">Cancel</string>
    <string name="ok">ok</string>
    <string name="setting">Setting</string>
</resources>
