<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="230dp"
    app:cardBackgroundColor="@color/background"
    android:layout_margin="10dp"
    style="@style/CardView">

    <LinearLayout
        android:layout_width="280dp"
        android:layout_gravity="center"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="160dp">

            <ImageView
                android:id="@+id/poster"
                android:src="@drawable/bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:transitionName="@string/detail_video_poster_transition" />

            <ProgressBar
                android:id="@+id/loading_image_progress"
                android:layout_width="@dimen/poster_progressbar_size"
                android:layout_height="@dimen/poster_progressbar_size"
                android:layout_gravity="center"
                android:indeterminateDrawable="@drawable/custom_progress"
                android:theme="@style/CircularProgress" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="2dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="6dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/cambo"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:transitionName="@string/detail_video_title_transition"
                tools:text="BÍCH PHƯƠNG - Bùa Yêu (Official M/V)" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:transitionName="@string/detail_video_content_transition"
                tools:text="Bích Phương trở lại với M/V Bùa Yêu - một sáng tác mới của Tiên Cookie, Phạm Thanh Hà và DươngK thuộc thể loại Pop." />
            <TextView
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:maxLines="2"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:transitionName="@string/detail_video_content_transition"
                tools:text="340 lượt xem" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>